fix: Fix args for java reflection modules being blocked
Signed-off-by: cbartram <cbartram3@gmail.com>